RESOLVED FIXED93386
[BlackBerry] Regression in credential storage when using Negotiate auth
https://bugs.webkit.org/show_bug.cgi?id=93386
Summary [BlackBerry] Regression in credential storage when using Negotiate auth
Joe Mason
Reported 2012-08-07 13:12:46 PDT
r124205 regressed credential storage and lookup. It added code to update the scheme used in credential storage if the scheme chosen by the network stack is different from that requested by webkit (currently this is only used when webkit requests Negotiate auth, but the Negotiate infrastructure isn't set up correctly, so the network stack falls back to another auth type, usually NTLM). But the credentials are saved when a "success" status is received, and the scheme in the credentials is not updated until notifyAuthReceived is called to report the actual auth scheme used. The result is that the credentials are stored with the wrong auth scheme and can never be retreived.
Attachments
fix (4.02 KB, patch)
2012-08-07 14:04 PDT, Joe Mason
no flags
fix with updated changelog (4.15 KB, patch)
2012-08-07 14:14 PDT, Joe Mason
no flags
Joe Mason
Comment 1 2012-08-07 14:04:22 PDT
Joe Mason
Comment 2 2012-08-07 14:06:07 PDT
Comment on attachment 156995 [details] fix Forgot to put this up for internal review first.
Joe Mason
Comment 3 2012-08-07 14:14:13 PDT
Created attachment 156999 [details] fix with updated changelog
WebKit Review Bot
Comment 4 2012-08-07 21:34:41 PDT
Comment on attachment 156999 [details] fix with updated changelog Clearing flags on attachment: 156999 Committed r124980: <http://trac.webkit.org/changeset/124980>
WebKit Review Bot
Comment 5 2012-08-07 21:34:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.